# antenna_tracker_ros2_humble

./: .gitignore  HANDOFF.md  README.md
.github/workflows/: ci_cd.yml  nightly_sim.yml
docker/: Dockerfile  docker-compose.yml
firmware/: CMakeLists.txt  app.overlay  prj.conf
firmware/src/: main.c  stubs.c
firmware_esp32/src/: main.c
scripts/: acados_ocp.json  generate_nmpc_solver.py  install_preempt_rt.sh  setup_can.sh  setup_micro_ros.sh  setup_ros2_humble.sh  test_bringup_smoke.py  test_bringup_smoke.sh  test_sim_auto_e2e.py  test_sim_auto_e2e.sh  test_sim_e2e.sh  test_sim_regression.sh
scripts/c_generated_code/: Makefile  acados_sim_solver_antenna_tracker.c  acados_sim_solver_antenna_tracker.h  acados_solver.pxd  acados_solver_antenna_tracker.c  acados_solver_antenna_tracker.h  main_antenna_tracker.c  main_sim_antenna_tracker.c
src/antenna_tracker_bringup/: CMakeLists.txt  package.xml
src/antenna_tracker_controller/: CMakeLists.txt  package.xml
src/antenna_tracker_hardware/: CMakeLists.txt  package.xml
src/antenna_tracker_hardware/micro_ros_firmware/: .clangd  CMakeLists.txt  prj.conf  west.yml
src/antenna_tracker_hardware/micro_ros_firmware/boards/: nucleo_h7a3zi_q.overlay
src/antenna_tracker_hardware/micro_ros_firmware/src/: bmi270_driver.c  bmi270_driver.h  gps_parser.c  gps_parser.h  hall_encoder.c  hall_encoder.h  main.c  mlx90393_driver.c  mlx90393_driver.h  motor_driver.c  motor_driver.h
src/antenna_tracker_msgs/: CMakeLists.txt  package.xml
src/antenna_tracker_simulation/: CMakeLists.txt  package.xml
(+57 files in other folders)
